--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 </head>
 
 <body><h1>History</h1>
-    <p><b>Main articles:</b> History of the blogging and online diary</p>
+    <b>Main articles:</b> History of the blogging and online diary
 
     <p>An early example of a "diary" style blog consisting of text and images transmitted wirelessly in real-time
         from a wearable computer with head-up display, February 22, 1995. The term "weblog" was coined by Jorn
